k8s/overlays/dev/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ciyex-portal-ui
spec:
  template:
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
        - name: ciyex-portal-ui
          image: registry.apps-prod.us-east.in.hinisoft.com/ciyex-portal-ui:2.0.2-alpha.2
