k8s/overlays/dev/ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ciyex-portal-ui-ingress
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - ciyex-portal.apps-dev.in.hinisoft.com
      secretName: ciyex-portal-ui-dev-tls
  rules:
    - host: ciyex-portal.apps-dev.in.hinisoft.com
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: dev-ciyex-portal-ui
                port:
                  number: 3000
